Add bats test case and run with travis
java-readline currently mangles UTF-8 input. It is tentatively planned
to fix this in 0.9.0 so all test cases for UTF-8 input/output are
currently disabled.

Additionally, Getline is currently completely broken so these test cases
are also currently disabled.

--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -27,4 +27,4 @@
 
 include $(SRCROOT)/mkrules.inc
 
-$(PACKDIR)/ReadlineTest.class: $(PACKDIR)/TestCompleter.class
+$(PACKDIR)/ReadlineTest.class: $(PACKDIR)/TestCompleter.class $(PACKDIR)/BatsTestReader.class $(PACKDIR)/BatsTestVar.class
