Support OpenJDK >= 10: Use 'javac -h' instead of 'javah' to generate header file
Tested on Debian GNU/Linux with OpenJDK 11 and OpenJDK 17

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,11 @@ BUILD=../build
 all : java native
 
 java: always $(BUILD)
+ifneq ($(USE_JAVAH),true)
+	$(JAVAC) $(JC_FLAGS) -h ./native -d $(BUILD) `find . -name "*.java"`
+else
 	$(JAVAC) $(JC_FLAGS) -d $(BUILD) `find . -name "*.java"`
+endif
 
 native: always
 	cd native ; $(MAKE) T_LIBS="$(T_LIBS)" JAVAINCLUDE="$(JAVAINCLUDE)" \
