--- a/pom.xml
+++ b/pom.xml
@@ -50,19 +50,9 @@
   </properties>
   <profiles>
     <profile>
-      <id>jdk16</id>
+      <id>jdk17andolder</id>
       <activation>
-        <jdk>1.6</jdk>
-      </activation>
-      <properties>
-        <maven.compiler.source>1.5</maven.compiler.source>
-        <maven.compiler.target>1.5</maven.compiler.target>
-      </properties>
-    </profile>
-    <profile>
-      <id>jdk17</id>
-      <activation>
-        <jdk>1.7</jdk>
+        <jdk>[1.3,1.8)</jdk>
       </activation>
       <properties>
         <maven.compiler.source>1.5</maven.compiler.source>
