--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,8 +5,10 @@ updates:
     schedule:
       interval: "weekly"
     ignore:
-      - dependency-name: "maven-enforcer-plugin"
+      - dependency-name: "org.apache.maven.plugins:maven-enforcer-plugin"
         versions: [">=3.1"]
+      - dependency-name: "org.apache.maven.plugins:maven-clean-plugin"
+        versions: [">=3.2"]
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
