Ignore newer enforcer plugin versions.
We are still keeping Java 7 around since there is not much effort to do
so, but we do have to restrict some plugins to not be too new.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,9 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    ignore:
+      - dependency-name: "maven-enforcer-plugin"
+        versions: [">=3.1"]
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
