--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,11 +6,12 @@ on:
     branches: [ master ]
 jobs:
   build:
-    runs-on: ubuntu-20.04
     strategy:
       matrix:
         jdk: ['7', '8', '11', '17', '21']
         cc: [gcc, clang]
+        os: [ubuntu-20.04, ubuntu-22.04]
+    runs-on: ${{ matrix.os }}
     steps:
     - name: Check out code
       uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
