--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.gnu</groupId>
   <artifactId>libreadline-java</artifactId>
   <packaging>jar</packaging>
-  <version>0.8.4-SNAPSHOT</version>
+  <version>0.8.4</version>
   <name>java-readline</name>
   <issueManagement>
     <url>https://github.com/aclemons/java-readline/issues</url>
